<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/connection_retry_button"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/button_retry"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/connection_title_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/connection_title_txt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/connection_content_txt"
        app:layout_constraintEnd_toEndOf="@+id/connection_content_txt"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/connection_content_txt" />

    <TextView
        android:id="@+id/connection_content_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/connection_content_txt"
        android:textAlignment="center"
        android:textColor="#424242"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/connection_retry_button"
        app:layout_constraintEnd_toEndOf="@+id/connection_retry_button"
        app:layout_constraintStart_toStartOf="@+id/connection_retry_button"
        app:layout_constraintWidth_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>