<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/icon_cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/image_app_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorBackground"
                android:contentDescription="@string/disc_app_logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/text_app_review_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="3dp"
                    android:contentDescription="@string/disc_app_star"
                    app:srcCompat="@drawable/black_star" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_app_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/txt_gray" />

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/view_line_white" />

        <LinearLayout
            android:id="@+id/download_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_app_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/app_downloads"
                android:textColor="@color/txt_gray" />

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/view_line_white"
            android:foregroundGravity="center" />

        <LinearLayout
            android:id="@+id/pegi_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_app_pegi"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:contentDescription="@string/desc_app_pegi"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/pegi_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/app_pegi"
                android:textColor="@color/txt_gray" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/button_app_install"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/button_background_green"
            android:gravity="center"
            android:text="@string/button_install"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"
            app:layout_constraintWidth_percent="0.75" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_app_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_app_about"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorBackground"
            android:clickable="true">

            <TextView
                android:id="@+id/text_app_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toStartOf="@+id/button_about_arrow"
                android:fontFamily="sans-serif-thin"
                android:text="@string/about_this_app"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/button_about_arrow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/image_view_app_description"
                android:textColor="#FFF"
                app:srcCompat="@drawable/arrow_right_gray" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_app_potted_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="4"
            android:text="@string/default_text_app_title"
            android:textColor="#3C3C3C"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_app_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/view_line_white"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="3dp"
                    android:contentDescription="@string/display_lock_image_on_annotation"
                    android:src="@drawable/ic_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_limit_opening"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/text_app_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="..."
                    android:textColor="#000"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_times"
                    android:textColor="#000" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_app_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/view_line_white"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/text_app_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_vertical"
                android:textColor="#000" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>


